<?xml version="1.0"?>
<package format="3">
  <name>orale_node</name>
  <version>0.0.1</version>
  <description>ROS2 node for reading serial data and publishing cmd_vel</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>opencv4</depend>



  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
